fix: Fixed overflow-x, removed certain z-indexes, made header unscrollable

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,4 +9,5 @@
 body {
     font-family: 'Germania One', sans-serif;
     background: #1B1B1B;
+    overflow-x: hidden;
 }
